# socorro-cli

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: client.rs  lib.rs  main.rs
src/commands/: crash.rs  mod.rs  search.rs
src/models/: common.rs  mod.rs  processed_crash.rs  search.rs
src/output/: compact.rs  json.rs  markdown.rs  mod.rs
